--- a/realsense2_camera/CMakeLists.txt
+++ b/realsense2_camera/CMakeLists.txt
@@ -8,6 +8,7 @@ option(SET_USER_BREAK_AT_STARTUP "Set user wait point in startup (for debug)" OF
 find_package(catkin REQUIRED COMPONENTS
     message_generation
     roscpp
+    rosunit
     sensor_msgs
     std_msgs
     nodelet
@@ -53,6 +54,12 @@ add_message_files(
     Extrinsics.msg
     )
 
+add_service_files(
+    FILES
+    PixelToPoint.srv
+    PointToPixel.srv
+    )
+
 generate_messages(
     DEPENDENCIES
     sensor_msgs
@@ -81,6 +88,7 @@ add_library(${PROJECT_NAME}
     include/base_realsense_node.h
     src/realsense_node_factory.cpp
     src/base_realsense_node.cpp
+    src/RealsensePixelPointConversionService.cc
     )
 
 add_dependencies(${PROJECT_NAME} ${PROJECT_NAME}_generate_messages_cpp)
@@ -122,3 +130,12 @@ install(DIRECTORY rviz/
 install(FILES nodelet_plugins.xml
     DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
     )
+
+#############
+## Testing ##
+#############
+
+if(CATKIN_ENABLE_TESTING)
+    find_package(rostest REQUIRED)
+    add_subdirectory(test)
+endif()
